chore: error ID logging, some stricter behavior on order creation